CSS/accountStyle.css
body{
    height:100%;
    width: 100%;
}

.header{
    width:100%;
    height:50px;
    background-color:#61d66f;
    display:inline-block;
}
.box{
    width: 35%;
    background-color:#AFEBB6;
    margin-top: 100px;
    margin-left: 10%;
    display: inline-block;
}
.title{
    /*width:100%;*/
    height:35px;
    background-color:#61d66f;
    margin-bottom: 10px;
    text-align: center;
    padding-top: 15px;
    padding-left:-20px;
    /*display:inline-block;*/
}
.saveChanges{
    width: 182px;
    height: 50px;
    background: url("SaveChanges.png");
    background-size: 182px 50px;
}
.saveChanges:hover{
    width: 182px;
    height: 50px;
    background: url("SaveChangesHover.png");
    background-size: 182px 50px;
}
.saveChanges:active{
    width: 182px;
    height: 50px;
    background: url("SaveChangesActive.png");
    background-size: 182px 50px;
}
.uploadPhoto{
    width: 182px;
    height: 50px;
    background: url("UploadPhoto.png");
    background-size: 182px 50px;
}
.uploadPhoto:hover{
    width: 182px;
    height: 50px;
    background: url("UploadPhotoHover.png");
    background-size: 182px 50px;
}
.uploadPhoto:active{
    width: 182px;
    height: 50px;
    background: url("UploadPhotoActive.png");
    background-size: 182px 50px;
}
.leave{
    width: 59px;
    height: 30px;
    background: url("Leave.png");
    background-size: 62px 33px;
}
.leave:hover{
    width: 59px;
    height: 30px;
    background: url("LeaveHover.png");
    background-size: 62px 33px;
}
.leave:active{
    width: 59px;
    height: 30px;
    background: url("LeaveActive.png");
    background-size: 62px 33px;
}
.create{
    width: 59px;
    height: 30px;
    background: url("Create.png");
    background-size: 62px 33px;
}
.create:hover{
    width: 59px;
    height: 30px;
    background: url("CreateHover.png");
    background-size: 62px 33px;
}
.create:active{
    width: 59px;
    height: 30px;
    background: url("CreateActive.png");
    background-size: 62px 33px;
}
.join{
    width: 59px;
    height: 30px;
    background: url("Join.png");
    background-size: 62px 33px;
}
.join:hover{
    width: 59px;
    height: 30px;
    background: url("JoinHover.png");
    background-size: 62px 33px;
}
.join:active{
    width: 59px;
    height: 30px;
    background: url("JoinActive.png");
    background-size: 62px 33px;
}
.logo{
    display: inline-block;
    width:100px;
    color:white;
    padding: 5px ;
    margin-top: 10px;
    margin-bottom: 10px;
    vertical-align: middle;
    position: relative;
}
.addInspirationButton{
    display: inline-block;
    width:10%;
    height:25px;
    color: #484848;
    background-color: #eeeeee;
    padding: 5px ;
    margin-top: 7px;
    margin-bottom: 10px;
    margin-left: 10%;
    text-align:center;
    line-height: 25px;

}
.sortBy{
    display: inline-block;
    width:50px;
    color:#484848;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 30%;
    vertical-align: middle;
    position: relative;
}
.triangleDown{
    display: inline-block;
    width:30px;
    color:#484848;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: .5%;
    vertical-align: middle;
    position: relative;
    font-size: 1em;
}
.searchBar{
    display: inline-block;
    width:20%;
    color:#484848;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: .5%;
    vertical-align: middle;
    position: relative;
    font-size: 1em;
}
.signinButton{
    display: inline-block;
    width:150px;
    height:20px;
    color:#484848;
    margin-top: 10px;
    margin-bottom: 10px;
    float:right;
    margin-right:20px;
    vertical-align: middle;
    position: relative;
}
.nav{
    position:relative;
    width:100%;
    height:50px;
    background-color: #484848;
}
.navButton{
    display: inline-block;
    text-align:center;
    line-height:50px;
    width:24.7902%;
    height:50px;

    color:#eeeeee;
    /*vertical-align: middle;*/
}
.navButton:hover{
    background-color: #ffffff;
    color:#484848;
}
.pictureBar{
    width:100%;
    height:100px;
    background-color: #ffffff;
}
.picture{
    display: inline-block;
    width:100px;
    height:100px;
    color: #030303;
    background-color: #ffffff;
    border: solid #484848 2px;
    margin-left: 5%;
    vertical-align: middle;
    position: relative;
    z-index:1;
}
.picture:hover{
    box-shadow: 10px 10px 5px #888888;
    overflow:hidden;

}
.nextButton{
    display: inline-block;
    height:50px;
    width: 25px;
    background-color: #61d66f;
    vertical-align: middle;
    margin-left:4%;
    color:#ffffff;

}
.nextButton:hover{
    background-color: #d6322f;
}
.content{
    width:100%;
    height:100%;
    background-color: #ffffff;
}
.mainView{
    height:300px;
    width:500px;
    margin:0 auto;
    padding: 0px;
    position: relative;
    background-color: #a6deff;
}

#loginContainer{
    padding-top:5%;
    margin:auto;
    width:300px;
}

.emailInput{
    display: block;
    width:100%;
    color:black;
    margin-top: 5px;
    margin-bottom: 5px;
    position: relative;
    font-size: 1em;
}
.passwordInput{
    display: block;
    width:100%;
    color:black;
    margin-top: 5px;
    margin-bottom: 5px;
    position: relative;
    font-size: 1em;
}
.facebookButton{
    float:right;
    margin-left:15px;
    display: inline-block;
}
.loginButton{
    display: inline-block;
    float:right;
    margin-left:15px;
}
.signupContainer{
    margin-top: 10%;
}

